infra/gke/manifests/coturn-vm/coturn-web-deploy.yaml
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn-web
  namespace: pod-broker-system
  labels:
    app: coturn-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn-web
  template:
    metadata:
      labels:
        app: coturn-web
    spec:
      serviceAccount: coturn-web
      terminationGracePeriodSeconds: 10
      containers:
        ###
        # HTTP api for serving json RTC configs.
        ###
        - name: coturn-web
          image: ghcr.io/selkies-project/selkies-gstreamer/coturn-web:latest
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8080
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
