infra/gke/manifests/coturn-vm/coturn-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn-web
spec:
  type: ClusterIP
  ports:
    - name: http-web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: coturn-web
