infra/gke/manifests/coturn-vm/coturn-web-virtualservice.yaml
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: coturn-web
spec:
  hosts:
    - "*"
  gateways:
    # If running cluster on a Selkies GKE cluster, set this to "pod-broker-system/pod-broker-gateway"
    - coturn
  http:
    - match:
        - uri:
            prefix: /turn/
      route:
        - destination:
            host: coturn-web
            port:
              number: 8080
